--- a/Readme
+++ b/Readme
@@ -1,1 +1,16 @@
 
+# Getting Started
+
+In the project directory, you can run:
+
+### `npm start`
+
+Runs the app in the development mode.\
+Open [http://localhost:3000](http://localhost:4000) to view graphql console in the browser.
+
+The page will reload if you make edits.\
+You will also see any lint errors in the console.
+
+
+
+https://apollo-movie.herokuapp.com/#/
